--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "react-scripts": "1.1.5"
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
+    "papaparse": "^4.6.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "react-swipeable-views": "^0.12.17"
   },
   "scripts": {
     "start": "react-scripts start",
